    - The name and icon of the cargo and fluid wagons are now shown on the 'Wagons/m' view state button tooltip
    - Line percentages now default to 100 instead of 0 when left blank
  Bugfixes:
    - Fixed an issue where Request Depots from Klonan's Transport Drones could not be selected a product (Thanks MCP!)
    - Fixed that the Deep Storage Unit mod's internal recipes were not being hidden
    - Fixed a rare crash when searching recipes or items
    - Fixed an issue where the number of subfactories in the archive could have been reported incorrectly
    - Fixed a few minor graphical inconsistencies

---------------------------------------------------------------------------------------------------
Version: 1.1.20
Date: 11. 04. 2021
  Bugfixes:
    - Fixed frequent desync on loading saves. I'm truly sorry about me taking so long to fix this.
    - Fixed that the dimming overlay would be stuck in front of the main window, blocking any interaction with it
    - Fixed that the background dimmer would be incorrectly sized on display scales other than 100%
    - Fixed that disabling the mod-gui button in the top left corner could leave behind an empty border if no other buttons are up there

---------------------------------------------------------------------------------------------------
Version: 1.1.19
Date: 10. 02. 2021
  Changes:
    - Made it so the 'to the top' button can be used starting at level 2 floors, instead of level 3
  Bugfixes:
    - Fixed a couple of issues where the mod would not properly select a machine for a recipe in some situations
    - Fixed an issue where some modal dialogs might not work correctly after reloading a save
    - Fixed that the last valid modset data would not be retained when importing an invalid subfactory
    - Fixed that alt-clicking a default machine in preferences could crash in certain cases
    - Fixed that trying to handcraft a module or beacon in the utilities dialog would crash